# pre_cfg_comfy_nodes_for_ComfyUI

./: README.md  __init__.py  imported_functions.py  nodes.py  pyproject.toml
.github/workflows/: publish.yml
latents/: sdxl_black.pt
